# wisp

./: .gitignore  Cargo.toml  README.md  demo.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: components.rs  lib.rs  model.rs  store.rs  tree.rs  undo.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  lib.rs  state.rs
crates/server/tests/: e2e.rs
docs/: INDEX.md
docs/dev/: architecture.md  contributing.md  protocol.md
docs/user/: commands.md  getting-started.md
