[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/protocol",
    "crates/server",
    "crates/cli",
    "app/src-tauri",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
