[package]
name = "app"
version.workspace = true
description = "Wisp desktop app — UI design tool for agents"
authors = ["Simon"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wisp-core = { path = "../../crates/core" }
wisp-server = { path = "../../crates/server" }
wisp-protocol = { path = "../../crates/protocol" }
tokio = { version = "1", features = ["full"] }
uuid.workspace = true

